CSS3 currentColor on outline-color gets treated as inherit https://bugs.webkit.org/show_bug.cgi?id=73180

Patch by David Barr <davidbarr@chromium.org> on 2012-02-12
Reviewed by Antti Koivisto.

Source/WebCore:

The CSS2 and CSS3 UI modules state that outline-color
is not inherited. Make it so.
http://www.w3.org/TR/CSS2/ui.html#propdef-outline-color
http://www.w3.org/TR/css3-ui/#outline-color

Test: fast/css/outline-currentcolor.html

* css/CSSStyleApplyProperty.cpp:
(WebCore::CSSStyleApplyProperty::CSSStyleApplyProperty):

LayoutTests:

Adapted fast/css/background-currentcolor.html dumpRenderTree test
for outline-color.

* fast/css/outline-currentcolor-expected.txt: Added.
* fast/css/outline-currentcolor.html: Added.

Canonical link: https://commits.webkit.org/95390@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107528 268f45cc-cd09-0410-ab3c-d52691b4dbfc